# GameProject_Island

./: README.md
GPJ1/Assets/Scenes/: Dead.unity  GameFinish.unity  Map1.unity  Start.unity
GPJ1/Assets/Scripts/: BloodEffect.cs  BossHp.cs  Buttonclicked.cs  CannonController.cs  CannonMover.cs  Cannondoorbreak.cs  DestroyOnContact.cs  Door.cs  EnemyController.cs  EnemyHp.cs  EnemyMover.cs  GameFinish.cs  GravityGun.cs  Hud.cs  IInventoryItem.cs  Inventory.cs  InventoryEventArgs.cs  InventoryItemClickable.cs  ItemInteractor.cs  PickupableItem.cs  PlayerHp.cs  PlayerMover.cs  SaveDog.cs  ScreenFlash.cs  ShieldCharge.cs  ShootController.cs  Sound.cs  StateMachine.cs  State_Attack.cs  State_Patrol.cs  State_Search.cs  Stickdes.cs  Switch.cs  UICursor.cs  Waypoint.cs  WoodShield.cs  bridgeswitch.cs  doglove.cs  fall.cs  heal.cs  (+2 more)
GPJ1/Assets/Sprites/: New Material.mat  game ui keys.tif
GPJ1/Assets/myprefabs/: BloodEffect.prefab  Bossinj.prefab  CannonBullet 1.prefab  CannonTrigger Variant.prefab  Enemy1.prefab  EnemyBullet.prefab  Gun.prefab  GunExplosion.prefab  Heart.prefab  PlayerBullet.prefab  Potion.prefab  ShieldBreak.prefab  ShieldPotion.prefab  bossbullet.prefab  breakeffect.prefab  crystal.prefab  dooreff Variant.prefab  fireair.prefab  nothingdrop.prefab  (+1 more)
GPJ1/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
GPJ1/UserSettings/: EditorUserSettings.asset
GPJ1/programming/: 14311495_COMP4008.docx  Jypyter.bat
GPJ1/programming/cmake 编程/: CMakeLists.txt  build.bat  cmake_gen_mingw.bat  git.txt  mainwindow备份.txt
(+320 files in other folders)
